# cpp_snippet

./: a.out
crypto/: CMakeLists.txt  af_alg.c
daemonize/: CMakeLists.txt  daemonize_demo  daemonize_demo.c
docker/zombie_demo/: Dockerfile  Dockerfile.tini  README.md  bad_init.c  monitor.sh  run_demo.sh  start.sh  zombie_factory.c  僵尸进程深度剖析.md
epoll/: CMakeLists.txt  epoll_wait_deviation.cc
for/: README.md  detect_underflow.cc  for_max_value.cc  run_static_analysis.sh  safe_subtraction.cc  static_analysis_demo.md
indicators/: CMakeLists.txt  README.md  main.cpp
indicators/.cache/clangd/index/: main.cpp.C0B3932CD8A0F6AB.idx
mysql/: INSTALL_MYSQLPP.md  Makefile  auto_increment_max_value_test.md  auto_increment_max_value_test.sql  install_mysqlpp.sh  mysql_search_example.cpp  mysql_search_example.md
mysql_snippet/: Makefile  mysql_search_example  mysql_search_example.cpp
process/: child_process.c
string/: Makefile  hmac_sha256  hmac_sha256.cpp
vector/: CMakeLists.txt  vector_iterartion.cc  vector_readme.md
vector_snippet/: vector_iterartion.cc
wait/: CMakeLists.txt  wait_example.c  wait_vs_waitpid.md
waitpid/: CMakeLists.txt  waitpid_example.cc  waitpid_notes.md  wuntraced_wcontinued_demo.c
